# teamfight_tactics

./: .gitignore  Cargo.toml  README.md
derive-core/: Cargo.toml
derive-core/src/: lib.rs  synergy.rs
libs/tft-core/: Cargo.toml
libs/tft-core/src/: item.rs  lib.rs  synergy.rs  unit.rs
libs/tft-parse/: Cargo.toml
libs/tft-parse/src/: lib.rs
libs/tft-parse/src/resources/: test_items.json  test_traits.json  test_units.json
libs/tft-set5/: Cargo.toml
libs/tft-set5-wasm/: Cargo.toml
libs/tft-set5-wasm/src/: lib.rs
libs/tft-set5/src/: item.rs  lib.rs  synergy.rs  trait.rs  unit.rs
libs/tft-set5/src/resources/: traits.json
src/: lib.rs
src/set5/: item.rs  mod.rs  synergy.rs  unit.rs
ui/: index.js  package-lock.json  package.json
yew-ui/: Cargo.toml  index.html
yew-ui/src/: main.rs  unit.rs
