[package]
name = "lib-tft-set5"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-tft-core = { path = "../tft-core" }
lib-tft-parse = { path  = "../tft-parse" }
serde =  { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
